--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    
+    <h1>This is largest heading</h1>
+    <button class="primary">Primary</button>
+    <h2 >This is 2nd largest heading</h2> <button class="secondary">Secondary</button>
 </body>
 </html>
